@@ -2,6 +2,8 @@ Changes from jTDS 0.9.1
 =======================
 
 12/19/2004 - Alin Sinpalean
+ o Applied Mike's fix for bug [1086494] DatabaseMetaData.getProcedureColumns
+   broken on Sybase.
  o Fixed bug [1087057] Connection is closed during XA Transaction. Also added
    check for error severity: if greater than or equal to 20 the Connection is
    closed (because the server will close the connection after the error).
